--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
 	</parent>
 
 	<groupId>gov.vha.isaac.gui.rails</groupId>
-	<artifactId>ets_prisme</artifactId>
+	<artifactId>ets_tooling</artifactId>
 	<version>1.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>ISAAC Rails ETS Tooling</name>
 
 	<description>
-		This project is the Ruby on Rails web GUI for PRISME
+		This project is the Ruby on Rails web GUI for ISAAC 
 	</description>
 
 	<properties>
@@ -26,7 +26,7 @@
 	</properties>
 
 	<scm>
-		<url>https://github.com/VA-CTT/ets_prisme.git</url>
+		<url>https://github.com/VA-CTT/ets_tooling.git</url>
 	</scm>
 
 	<dependencies>
@@ -120,7 +120,7 @@
 						</goals>
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
-							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme_a</execArgs>
+							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_tooling_a</execArgs>
 							<command>rake</command>
 							<args>devops:build_war</args>
 						</configuration>
@@ -133,7 +133,7 @@
 						</goals>
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
-							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme_b</execArgs>
+							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_tooling_b</execArgs>
 							<command>rake</command>
 							<args>devops:build_war</args>
 						</configuration>
@@ -178,12 +178,12 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>${project.build.directory}/ets_prisme_a.war</file>
+									<file>${project.build.directory}/ets_tooling_a.war</file>
 									<classifier>a</classifier>
 									<type>war</type>
 								</artifact>
 								<artifact>
-									<file>${project.build.directory}/ets_prisme_b.war</file>
+									<file>${project.build.directory}/ets_tooling_b.war</file>
 									<classifier>b</classifier>
 									<type>war</type>
 								</artifact>
