--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
 	</parent>
 
 	<groupId>gov.vha.isaac.gui.rails</groupId>
-	<artifactId>ets_tooling</artifactId>
+	<artifactId>ets_prisme</artifactId>
 	<version>1.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>ISAAC Rails ETS Tooling</name>
+	<name>ISAAC Rails ETS PRISME</name>
 
 	<description>
-		This project is the Ruby on Rails web GUI for ISAAC 
+		This project is the Ruby on Rails web GUI for PRISME
 	</description>
 
 	<properties>
@@ -26,7 +26,7 @@
 	</properties>
 
 	<scm>
-		<url>https://github.com/VA-CTT/ets_tooling.git</url>
+		<url>https://github.com/VA-CTT/ets_prisme.git</url>
 	</scm>
 
 	<dependencies>
@@ -97,6 +97,19 @@
 							<args>install</args>
 						</configuration>
 					</execution>
+<!--Dan how do I do a conditional execution?  The next two should only be run in test mode.-->
+					<execution>
+						<id>run migration for test db</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<jrubyVerbose>true</jrubyVerbose>
+							<command>rake</command>
+							<args>db:migrate RAILS_ENV=test</args>
+						</configuration>
+					</execution>
 					
 					<execution>
 						<id>run tests</id>
@@ -107,7 +120,7 @@
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
 							<command>rake</command>
-							<args>devops:isaac_rest_test</args>
+							<args>test:units</args>
 						</configuration>
 					</execution>
 					
@@ -120,7 +133,7 @@
 						</goals>
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
-							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_tooling_a</execArgs>
+							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme_a</execArgs>
 							<command>rake</command>
 							<args>devops:build_war</args>
 						</configuration>
@@ -133,7 +146,7 @@
 						</goals>
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
-							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_tooling_b</execArgs>
+							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme_b</execArgs>
 							<command>rake</command>
 							<args>devops:build_war</args>
 						</configuration>
@@ -178,12 +191,12 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>${project.build.directory}/ets_tooling_a.war</file>
+									<file>${project.build.directory}/ets_prisme_a.war</file>
 									<classifier>a</classifier>
 									<type>war</type>
 								</artifact>
 								<artifact>
-									<file>${project.build.directory}/ets_tooling_b.war</file>
+									<file>${project.build.directory}/ets_prisme_b.war</file>
 									<classifier>b</classifier>
 									<type>war</type>
 								</artifact>
