--- a/pom.xml
+++ b/pom.xml
@@ -1,191 +1,213 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>gov.vha.isaac.ochre</groupId>
-		<artifactId>isaac-parent</artifactId>
-		<version>3.01-SNAPSHOT</version>
-	</parent>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>gov.vha.isaac.ochre</groupId>
+    <artifactId>isaac-parent</artifactId>
+    <version>3.01-SNAPSHOT</version>
+  </parent>
 
-	<groupId>gov.vha.isaac.gui.rails</groupId>
-	<artifactId>ets_prisme</artifactId>
-	<version>1.3-SNAPSHOT</version>
-	<packaging>pom</packaging>
+  <groupId>gov.vha.isaac.gui.rails</groupId>
+  <artifactId>ets_prisme</artifactId>
+  <version>1.3-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-	<name>ISAAC Rails ETS PRISME</name>
+  <name>ISAAC Rails ETS PRISME</name>
 
-	<description>
-		This project is the Ruby on Rails web GUI for PRISME
-	</description>
+  <description>
+    This project is the Ruby on Rails web GUI for PRISME
+  </description>
 
-	<properties>
-		<ets_common.version>1.0-SNAPSHOT</ets_common.version>
-		<!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
-		or 'production' otherwise.  See ant execution below-->
-	</properties>
+  <properties>
+    <ets_common.version>1.0-SNAPSHOT</ets_common.version>
+    <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
+    or 'production' otherwise.  See ant execution below-->
+  </properties>
 
-	<scm>
-		<url>https://github.com/VA-CTT/ets_prisme.git</url>
-	</scm>
+  <scm>
+    <url>https://github.com/VA-CTT/ets_prisme.git</url>
+  </scm>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.jruby</groupId>
-			<artifactId>jruby-complete</artifactId>
-			<version>9.0.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>rubygems</groupId>
-			<artifactId>rake</artifactId>
-			<version>10.4.2</version>
-			<type>gem</type>
-		</dependency>
-		<dependency>
-			<groupId>rubygems</groupId>
-			<artifactId>bundler</artifactId>
-			<version>1.11.2</version>
-			<type>gem</type>
-		</dependency>
-		<dependency>
-			<groupId>gov.vha.isaac.gui.rails</groupId>
-			<artifactId>ets_common</artifactId>
-			<version>${ets_common.version}</version>
-			<type>zip</type>
-			<optional>true</optional> <!-- Not needed at runtime / transitively -->
-		</dependency>
-	</dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.jruby</groupId>
+      <artifactId>jruby-complete</artifactId>
+      <version>9.0.4.0</version>
+    </dependency>
+    <dependency>
+      <groupId>rubygems</groupId>
+      <artifactId>rake</artifactId>
+      <version>10.4.2</version>
+      <type>gem</type>
+    </dependency>
+    <dependency>
+      <groupId>rubygems</groupId>
+      <artifactId>bundler</artifactId>
+      <version>1.11.2</version>
+      <type>gem</type>
+    </dependency>
+    <dependency>
+      <groupId>gov.vha.isaac.gui.rails</groupId>
+      <artifactId>ets_common</artifactId>
+      <version>${ets_common.version}</version>
+      <type>zip</type>
+      <optional>true</optional> <!-- Not needed at runtime / transitively -->
+    </dependency>
+    <dependency>
+      <groupId>com.offbytwo.jenkins</groupId>
+      <artifactId>jenkins-client</artifactId>
+      <version>0.3.3</version>
+    </dependency>
+  </dependencies>
 
-	<build>
-		<plugins>
+  <build>
+    <plugins>
 
-			<!-- Extract the ets_common code into the correct place here, overwriting any existing version -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>extract-ets_common</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>unpack-dependencies</goal>
-						</goals>
-						<configuration>
-							<includeArtifactIds>ets_common</includeArtifactIds>
-							<outputDirectory>${basedir}/lib/</outputDirectory>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+      <!-- Extract the ets_common code into the correct place here, overwriting any existing version -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>extract-ets_common</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <includeArtifactIds>ets_common</includeArtifactIds>
+              <outputDirectory>${basedir}/lib/</outputDirectory>
+              <overWriteReleases>true</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
+            </configuration>
+          </execution>
+          <execution>
+            <id>place-jenkins_client</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>unpack-dependencies</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <artifactId>jenkins-client</artifactId>
+                  <overWrite>true</overWrite>
+                  <type>jar</type>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${basedir}/lib/jars/jenkins_client</outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 
-			<plugin>
-				<groupId>de.saumya.mojo</groupId>
-				<artifactId>jruby9-exec-maven-plugin</artifactId>
-				<version>0.2.2</version>
-				<executions>
-					<execution>
-						<id>bundle install</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<jrubyVerbose>true</jrubyVerbose>
-							<command>bundle</command>
-							<args>install</args>
-						</configuration>
-					</execution>
-<!--Dan how do I do a conditional execution?  The next two should only be run in test mode.-->
-					<execution>
-						<id>run migration for test db</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<jrubyVerbose>true</jrubyVerbose>
-							<command>rake</command>
-							<args>db:migrate RAILS_ENV=test</args>
-						</configuration>
-					</execution>
-					
-					<execution>
-						<id>run tests</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<jrubyVerbose>true</jrubyVerbose>
-							<command>rake</command>
-							<args>test:units</args>
-						</configuration>
-					</execution>
-					
-					<!-- Build two instances of the war for now - one with a relative path of _a, one with _b, so we can deploy twice on the same server -->
-					<execution>
-						<id>build war b</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>exec</goal>
-						</goals>
-						<configuration>
-							<jrubyVerbose>true</jrubyVerbose>
-							<execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme</execArgs>
-							<command>rake</command>
-							<args>devops:build_war</args>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
+      <plugin>
+        <groupId>de.saumya.mojo</groupId>
+        <artifactId>jruby9-exec-maven-plugin</artifactId>
+        <version>0.2.2</version>
+        <executions>
+          <execution>
+            <id>bundle install</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <jrubyVerbose>true</jrubyVerbose>
+              <command>bundle</command>
+              <args>install</args>
+            </configuration>
+          </execution>
+          <!--Dan how do I do a conditional execution?  The next two should only be run in test mode.-->
+          <execution>
+            <id>run migration for test db</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <jrubyVerbose>true</jrubyVerbose>
+              <command>rake</command>
+              <args>db:migrate RAILS_ENV=test</args>
+            </configuration>
+          </execution>
 
-			<!-- Set a variable for the rails runtime mode based on whether we are building SNAPSHOT or not -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>config</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<exportAntProperties>true</exportAntProperties>
-							<target name="set-build-type">
-								<condition property="railsMode" value="test" else="production">
-									<matches string="${project.version}" pattern=".*-SNAPSHOT"></matches>
-								</condition>
-							</target>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			
-			<!-- Attach both wars -->
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-artifacts</id>
-						<phase>package</phase>
-						<goals>
-							<goal>attach-artifact</goal>
-						</goals>
-						<configuration>
-							<artifacts>
-								<artifact>
-									<file>${project.build.directory}/ets_prisme.war</file>
-									<type>war</type>
-								</artifact>
-							</artifacts>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+          <execution>
+            <id>run tests</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <jrubyVerbose>true</jrubyVerbose>
+              <command>rake</command>
+              <args>test:units</args>
+            </configuration>
+          </execution>
+
+          <!-- Build two instances of the war for now - one with a relative path of _a, one with _b, so we can deploy twice on the same server -->
+          <execution>
+            <id>build war b</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <jrubyVerbose>true</jrubyVerbose>
+              <execArgs>RAILS_ENV=${railsMode} RAILS_RELATIVE_URL_ROOT=ets_prisme</execArgs>
+              <command>rake</command>
+              <args>devops:build_war</args>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- Set a variable for the rails runtime mode based on whether we are building SNAPSHOT or not -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>config</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <exportAntProperties>true</exportAntProperties>
+              <target name="set-build-type">
+                <condition property="railsMode" value="test" else="production">
+                  <matches string="${project.version}" pattern=".*-SNAPSHOT"></matches>
+                </condition>
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- Attach both wars -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>attach-artifacts</id>
+            <phase>package</phase>
+            <goals>
+              <goal>attach-artifact</goal>
+            </goals>
+            <configuration>
+              <artifacts>
+                <artifact>
+                  <file>${project.build.directory}/ets_prisme.war</file>
+                  <type>war</type>
+                </artifact>
+              </artifacts>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
