--- a/setup.bat.template
+++ b/setup.bat.template
@@ -1,5 +1,5 @@
 set JRUBY_OPTS=-J-Xmx2g
-set GEM_HOME=C:\work\ETS\ets_prisme\gem_home
+set GEM_HOME=C:\work\ETS\rails_prisme\gem_home
 set JRUBY_PATH=C:\languages\ruby\jruby-9.0.4.0
 set JRUBY_JAR=%JRUBY_PATH%\jruby-complete-9.0.4.0.jar
 set JAVA_HOME=C:\languages\Java\jdk1.8.0_65
