added job to clean out the job queue of messages greater than x days old

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -1,2 +1,5 @@
 #System.setProperty("java.util.logging.manager", "org.apache.logging.log4j.jul.LogManager");
 log_manager=org.apache.logging.log4j.jul.LogManager
+
+# trim jobs older than x days old
+job_queue_trim=0
