--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -2,4 +2,5 @@
 log_manager=org.apache.logging.log4j.jul.LogManager
 
 # trim jobs older than x days old
-job_queue_trim=0
+job_queue_trim=90
+resched_clean_queue_days=1
