--- a/test/fixtures/services.yml
+++ b/test/fixtures/services.yml
@@ -3,9 +3,9 @@
 one:
   name: MyString
   description: MyText
-  singleton: false
+  service_type: false
 
 two:
   name: MyString
   description: MyText
-  singleton: false
+  service_type: false
