syncing fixtures with service type keys that drives the GUI

--- a/config/service/service_types.yml
+++ b/config/service/service_types.yml
@@ -1,3 +1,4 @@
+# it is CRITICAL that the keys specified here match the fixtures
  tomcat:
    label: Tomcat
    description: Tomcat Application Server
