More Nexus wiring.

--- a/config/props/endpoint.properties
+++ b/config/props/endpoint.properties
@@ -1,4 +1,3 @@
-# end nexus_root with a slash '/'
-nexus_root = http://vadev.mantech.com:8081/
-nexus_user = devtest
-nexus_pwd = devtest
+# begin with '/'
+nexus_maven_content = /nexus/service/local/artifact/maven/content
+nexus_lucene_search = /nexus/service/local/lucene/search
