added order_idx to ServiceProperty model so that we can use it to sort the fields with the fields_for tag when editing; modified migration, fixtures, and service_types.yml to be in sync

--- a/config/service/service_types.yml
+++ b/config/service/service_types.yml
@@ -1,43 +1,51 @@
 # it is CRITICAL that the keys specified here match the fixtures
- tomcat:
-   label: Tomcat
-   description: Tomcat Application Server
-   singleton: false
-   props:
-     - key: cargo.remote.username
-       label: User Name
-     - key: cargo.remote.password
-       label: Password
-       type: password
-     - key: cargo.tomcat.manager.url
-       label: URL
-       type: url
-     - key: cargo.servlet.port
-       label: Port
-       type: number
-     - key: cargo.hostname
-       label: Hostname
- nexus:
-   label: Nexus
-   description: Nexus Artifactory Server
-   singleton: true
-   props:
-     - key: nexus_root
-       label: Root URL:port
-       type: url
-     - key: nexus_user
-       label: User Name
-     - key: nexus_pwd
-       label: Password
-       type: password
+tomcat:
+  label: Tomcat
+  description: Tomcat Application Server
+  singleton: false
+  props:
+   - key: cargo.remote.username
+     label: User Name
+     order_idx: 0
+   - key: cargo.remote.password
+     label: Password
+     type: password
+     order_idx: 1
+   - key: cargo.tomcat.manager.url
+     label: URL
+     type: url
+     order_idx: 2
+   - key: cargo.servlet.port
+     label: Port
+     type: number
+     order_idx: 3
+   - key: cargo.hostname
+     label: Hostname
+     order_idx: 4
+nexus:
+  label: Nexus
+  description: Nexus Artifactory Server
+  singleton: true
+  props:
+   - key: nexus_root
+     label: Root URL:port
+     type: url
+     order_idx: 0
+   - key: nexus_user
+     label: User Name
+     order_idx: 1
+   - key: nexus_pwd
+     label: Password
+     type: password
+     order_idx: 2
 
-       # java.lang.System.getProperties.put('cargo.remote.username','devtest')
-       # java.lang.System.getProperties.put('cargo.remote.password','devtest')
-       # java.lang.System.getProperties.put('cargo.tomcat.manager.url','http://vadev.mantech.com:4848/manager')
-       # java.lang.System.getProperties.put('cargo.servlet.port','4848')
-       # java.lang.System.getProperties.put('cargo.hostname','vadev.mantech.com')
+   # java.lang.System.getProperties.put('cargo.remote.username','devtest')
+   # java.lang.System.getProperties.put('cargo.remote.password','devtest')
+   # java.lang.System.getProperties.put('cargo.tomcat.manager.url','http://vadev.mantech.com:4848/manager')
+   # java.lang.System.getProperties.put('cargo.servlet.port','4848')
+   # java.lang.System.getProperties.put('cargo.hostname','vadev.mantech.com')
 
-       #Nexus
-       # nexus_root = http://vadev.mantech.com:8081/
-       # nexus_user = devtest
-       # nexus_pwd = devtest
+   #Nexus
+   # nexus_root = http://vadev.mantech.com:8081/
+   # nexus_user = devtest
+   # nexus_pwd = devtest
