--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
  # url: jdbc:hsqldb:file:./db/data/prisme_development
   #url: jdbc:derby:file:./db/data/prisme_development
   database: db/data/prisme_development.sqlite3
-
+  timeout: 100000
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
