--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.01-SNAPSHOT</version>
+    <version>3.01</version>
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
@@ -23,7 +23,7 @@
   </description>
 
   <properties>
-    <rails_common.version>1.0-SNAPSHOT</rails_common.version>
+    <rails_common.version>1.0</rails_common.version>
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.  See ant execution below-->
   </properties>
