--- a/test/fixtures/services.yml
+++ b/test/fixtures/services.yml
@@ -9,6 +9,12 @@ tomcat:
   description: Tomcat Application Server
   service_type: tomcat
 
+tomcat_localhost:
+  name: Tomcat localhost
+  description: Tomcat Application Server
+  service_type: tomcat
+
+
 # nexus service data
 nexus:
   name: Nexus
