--- a/pom.xml
+++ b/pom.xml
@@ -55,21 +55,25 @@
 			<version>${rails_common.version}</version>
 			<type>zip</type>
 			<optional>true</optional> <!-- Not needed at runtime / transitively -->
-				</dependency>
+		</dependency>
 		<dependency>
 			<groupId>com.offbytwo.jenkins</groupId>
 			<artifactId>jenkins-client</artifactId>
 			<version>0.3.3</version>
 			<optional>true</optional><!-- Not needed at runtime / transitively -->
-			<scope>runtime</scope>  <!-- Keep it off the build classpath - causes issues with jgitflow -->
 		</dependency>
 		<dependency>
 			<groupId>org.codehaus.cargo</groupId>
 			<artifactId>cargo-core-uberjar</artifactId>
 			<version>1.4.19</version>
 			<optional>true</optional><!-- Not needed at runtime / transitively -->
-			<scope>runtime</scope>  <!-- Keep it off the build classpath - causes issues with jgitflow https://ecosystem.atlassian.net/browse/MJF-251 -->
-		</dependency>
+			<exclusions>
+				<!--exclusion>
+					<groupId>xerces</groupId>
+					<artifactId>xercesImpl</artifactId>  <!- - breaks jgitflow https://ecosystem.atlassian.net/browse/MJF-251 - ->
+				</exclusion-->
+			</exclusions>
+			</dependency>
 	</dependencies>
 
 	<build>
@@ -222,6 +226,13 @@
 				<groupId>external.atlassian.jgitflow</groupId>
 				<artifactId>jgitflow-maven-plugin</artifactId>
 				<version>1.0-m5.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>xerces</groupId>
+						<artifactId>xercesImpl</artifactId>
+						<version>2.11.0</version>
+					</dependency>
+				</dependencies>
 				<configuration>
 					<pushReleases>true</pushReleases>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
