--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
 	<groupId>gov.vha.isaac.gui.rails</groupId>
 	<artifactId>rails_prisme</artifactId>
-	<version>1.3-SNAPSHOT</version>
+	<version>1.3</version>
 	<packaging>pom</packaging>
 
 	<name>ISAAC Rails PRISME</name>
