--- a/pom.xml
+++ b/pom.xml
@@ -67,12 +67,6 @@
 			<artifactId>cargo-core-uberjar</artifactId>
 			<version>1.4.19</version>
 			<optional>true</optional><!-- Not needed at runtime / transitively -->
-			<exclusions>
-				<!--exclusion>
-					<groupId>xerces</groupId>
-					<artifactId>xercesImpl</artifactId>  <!- - breaks jgitflow https://ecosystem.atlassian.net/browse/MJF-251 - ->
-				</exclusion-->
-			</exclusions>
 			</dependency>
 	</dependencies>
 
@@ -228,19 +222,11 @@
 				<version>1.0-m5.1</version>
 				<dependencies>
 					<dependency>
-						<groupId>xerces</groupId>
+						<groupId>xerces</groupId>  <!-- workaround jgitflow https://ecosystem.atlassian.net/browse/MJF-251 -->
 						<artifactId>xercesImpl</artifactId>
 						<version>2.11.0</version>
 					</dependency>
 				</dependencies>
-				<configuration>
-					<pushReleases>true</pushReleases>
-					<autoVersionSubmodules>true</autoVersionSubmodules>
-					<scmCommentPrefix>[jgitflow-plugin]</scmCommentPrefix>
-					<enableSshAgent>true</enableSshAgent>
-					<allowSnapshots>false</allowSnapshots>
-					<enableFeatureVersions>true</enableFeatureVersions>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
