--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,19 @@
 							<args>db:migrate RAILS_ENV=test</args>
 						</configuration>
 					</execution>
+					
+					<execution>
+						<id>run migration for test db</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<jrubyVerbose>true</jrubyVerbose>
+							<command>rake</command>
+							<args>db:migrate RAILS_ENV=production</args>
+						</configuration>
+					</execution>
 
 					<execution>
 						<id>run tests</id>
