--- a/config/service/service_types.yml
+++ b/config/service/service_types.yml
@@ -39,6 +39,23 @@ nexus:
      type: password
      order_idx: 2
 
+jenkins:
+  label: Jenkins
+  description: Jenkins CI Server
+  singleton: true
+  props:
+   - key: jenkins_root
+     label: Root URL:port
+     type: url
+     order_idx: 0
+   - key: jenkins_user
+     label: User Name
+     order_idx: 1
+   - key: jenkins_pwd
+     label: Password
+     type: password
+     order_idx: 2
+
    # java.lang.System.getProperties.put('cargo.remote.username','devtest')
    # java.lang.System.getProperties.put('cargo.remote.password','devtest')
    # java.lang.System.getProperties.put('cargo.tomcat.manager.url','http://vadev.mantech.com:4848/manager')
