--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
 							<command>rake</command>
-							<args>db:reset RAILS_ENV=test</args>
+							<args>db:rollback STEP=9999 RAILS_ENV=test db:migrate RAILS_ENV=test</args>
 						</configuration>
 					</execution>
 					
@@ -151,7 +151,7 @@
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
 							<command>rake</command>
-							<args>db:reset RAILS_ENV=production</args>
+							<args>db:rollback STEP=9999 RAILS_ENV=test db:migrate RAILS_ENV=test</args>
 						</configuration>
 					</execution>
 
