--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 						<configuration>
 							<jrubyVerbose>true</jrubyVerbose>
 							<command>rake</command>
-							<args>db:rollback STEP=9999 RAILS_ENV=test db:migrate RAILS_ENV=test</args>
+							<args>db:rollback STEP=9999 RAILS_ENV=production db:migrate RAILS_ENV=production</args>
 						</configuration>
 					</execution>
 
