--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     </dependency>
     <dependency>
       <groupId>de.schlichtherle.truezip</groupId>
-      <artifactId>truezip</artifactId>
+      <artifactId>truezip-file</artifactId>
       <version>7.7.9</version>
     </dependency>
 
