--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.03-SNAPSHOT</version>
+    <version>3.03</version>
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
@@ -24,8 +24,8 @@
   </description>
 
   <properties>
-    <rails_common.version>1.2-SNAPSHOT</rails_common.version>
-    <isaac.version>3.03-SNAPSHOT</isaac.version>
+    <rails_common.version>1.2</rails_common.version>
+    <isaac.version>3.03</isaac.version>
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.	See ant execution below-->
   </properties>
