--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     </dependency>
     <dependency>
       <groupId>de.schlichtherle.truezip</groupId>
-      <artifactId>truezip-samples</artifactId>
+      <artifactId>truezip-file</artifactId>
       <version>7.7.9</version>
     </dependency>
     <dependency>
