--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
     </dependency>
     <dependency>
       <groupId>de.schlichtherle.truezip</groupId>
+      <artifactId>truezip-driver-zip</artifactId>
+      <version>7.7.9</version>
+    </dependency>
+    <dependency>
+      <groupId>de.schlichtherle.truezip</groupId>
       <artifactId>truezip-file</artifactId>
       <version>7.7.9</version>
     </dependency>
