--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>gov.vha.isaac.ochre</groupId>
     <artifactId>isaac-parent</artifactId>
-    <version>3.05-SNAPSHOT</version>
+    <version>3.04</version>
   </parent>
 
   <groupId>gov.vha.isaac.gui.rails</groupId>
@@ -24,7 +24,7 @@
 
   <properties>
     <rails_common.version>1.3</rails_common.version>
-    <isaac.version>3.05-SNAPSHOT</isaac.version>
+    <isaac.version>3.04</isaac.version>
     <!-- railsMode is automatically set to 'test' or 'production' - 'test' if the version number ends with '-SNAPSHOT'
     or 'production' otherwise.	See ant execution below-->
   </properties>
