Support for toggling Active Record logging on and off. Support for toggling Jenkins job deletion on and off. Fix for our fixtures.  Our fixture had the incorrect encrypted password.

--- a/config/props/prisme.properties
+++ b/config/props/prisme.properties
@@ -4,3 +4,9 @@ log_manager=org.apache.logging.log4j.jul.LogManager
 # trim jobs older than x days old
 job_queue_trim=90
 resched_clean_queue_days=1
+
+#delete jenkins jobs (does not affect the cleanup job)
+delete_jenkins_jobs = true
+
+#log active record
+log_active_record = false
