--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -7,15 +7,15 @@
     acceptCount: 100
     maxThreads: 200
     maxKeepAliveRequests: 100
-  https:
-    port: 443
+#  https:
+#    port: 443
     #generated via:
     #keytool -genkeypair -alias myRSAKey -keyalg RSA -keysize 1024 -keystore test.p12 -storepass criscris -storetype pkcs12
     #SSLCertificateFile: C:/temp/ssl/server.crt
     #SSLCertificateKeyFile: C:/temp/ssl/server.key
-    keystoreFile: C:/temp/ssl/test.p12
-    keystorePass: criscris
-    keystoreType: pkcs12
+    #keystoreFile: C:/temp/ssl/test.p12
+    #keystorePass: criscris
+    #keystoreType: pkcs12
     # @see https://github.com/trinidad/trinidad/wiki/HTTP-Connector
 #<% unless ENV['SSL_PORT'].nil? %>
 #  ssl: # SSL configuration
