Property in wrong file.

--- a/config/props/jenkins.properties
+++ b/config/props/jenkins.properties
@@ -2,3 +2,5 @@
 build_check_seconds = 30
 #maximum number of attempts to check build health
 max_health_checks = 10
+#delete jenkins jobs (does not affect the cleanup job)
+delete_jenkins_jobs = true
