--- a/test/fixtures/service_properties.yml
+++ b/test/fixtures/service_properties.yml
@@ -42,16 +42,21 @@ six:
   key: nexus_repository_url
   value: http://vadev.mantech.com:8081/nexus/content/groups/everything/
   order_idx: 0
+six_and_a_half:
+  service: nexus
+  key: nexus_publication_url
+  value: http://vadev.mantech.com:8081/nexus/content/repositories/termdata/
+  order_idx: 1
 seven:
   service: nexus
   key: nexus_user
   value: devtest
-  order_idx: 1
+  order_idx: 2
 eight:
   service: nexus
   key: nexus_pwd
   value: "[\"jK\\x90\\xA1\\x1Fk\\x87\\xD7\\xC3\\xD8\\xA8\\x9A\\x18\\xD4fC\"]"
-  order_idx: 2
+  order_idx: 3
 
 # jenkins service properties
 nine:
